--- a/requirements.txt
+++ b/requirements.txt
@@ -20,11 +20,15 @@ decorator==5.1.1
 defusedxml==0.7.1
 entrypoints==0.4
 executing==0.8.3
+Flask==2.1.1
 fonttools==4.31.2
+gunicorn==20.1.0
 idna==3.3
+importlib-metadata==4.11.3
 ipykernel==6.10.0
 ipython==8.2.0
 ipython-genutils==0.2.0
+itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.1.1
 jinja2-time==0.2.0
@@ -62,6 +66,8 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 python-slugify==6.1.1
 pytz==2022.1
+pywin32==303
+pywinpty==2.0.5
 pyzmq==22.3.0
 requests==2.27.1
 scikit-learn==1.0.2
@@ -80,3 +86,5 @@ traitlets==5.1.1
 urllib3==1.26.9
 wcwidth==0.2.5
 webencodings==0.5.1
+Werkzeug==2.1.1
+zipp==3.8.0
